# raytracer

./: .gitignore  README.md  go.mod  go.sum  main.go  scene.json
cpp/: CMakeLists.txt  config.cpp  config.h  image.cpp  image.h  raytracer.cpp  scene.cpp  scene.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
raytrace/: config.go  defaultscene.go  raytracer.go  raytracer_test.go  sphere.go  sphere_test.go  vector3.go
